<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".Registro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:hint="@string/nombre_completo"
        android:inputType="textCapWords"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtEdad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:ems="10"
            android:hint="@string/edad"
            android:inputType="number"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/txtCedula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:hint="@string/cedula"
            android:inputType="number"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtPais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:ems="10"
            android:hint="@string/pais"
            android:inputType="textCapWords"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/txtCiudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:hint="@string/ciudad"
            android:inputType="textCapWords"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtCargo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/cargo"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spnCargo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtComponente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/componente"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spnComponente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtFase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/fase_discipulo"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spnFaseDisci"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtLiderNal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/lider_nal"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spnLiNaL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtLiCiudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/lider_ciudad"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spnLiCdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/estado"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spnEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="140dp"
        android:onClick="GuardarRegistro"
        android:text="@string/guardar"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>
